[project]
name = "expense-categorization-env"
version = "1.0.0"
description = "Expense categorization OpenEnv environment"
authors = [
    { name = "Vyshnavi" }
]
dependencies = [
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
